* Added support for HTTP HEAD requests.

18

* Gets don't follow redirects by default.
* Fixed example given in tests directory.
* If no arguments are given on the command line, throws an exception saying no file specified.

17

* Can now set a request to follow redirects.

15

* Changed so that a regex matches if it's found anywhere within the string.
* In regexes, a dot character now matches line terminators as well.

For other bug fixes and feature requests please see:

http://sourceforge.net/tracker/?group_id=145016