@@ -3,10 +3,11 @@
 	<classpathentry kind="src" path="app/src"/>
 	<classpathentry kind="src" path="war/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="JAVA_LIB_HOME/commons-fileupload-1.2.1/lib/commons-fileupload-1.2.1.jar"/>
-	<classpathentry kind="var" path="TOMCAT_COMMON/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="/home/tlocke/java/httpcomponents-client-4.1/lib/httpclient-4.1.jar"/>
-	<classpathentry kind="lib" path="/home/tlocke/java/httpcomponents-client-4.1/lib/httpcore-4.1.jar"/>
-	<classpathentry kind="lib" path="/home/tlocke/java/httpcomponents-client-4.1/lib/httpmime-4.1.jar"/>
+	<classpathentry kind="var" path="JAVA_LIB_HOME/commons-fileupload-1.2.2/lib/commons-fileupload-1.2.2.jar"/>
+	<classpathentry kind="var" path="TOMCAT_COMMON/servlet-api.jar"/>
+	<classpathentry kind="var" path="JAVA_LIB_HOME/httpcomponents-client-4.1.1/lib/httpclient-4.1.1.jar"/>
+	<classpathentry kind="var" path="JAVA_LIB_HOME/httpcomponents-client-4.1.1/lib/httpcore-4.1.jar"/>
+	<classpathentry kind="var" path="JAVA_LIB_HOME/httpcomponents-client-4.1.1/lib/httpmime-4.1.1.jar"/>
+	<classpathentry kind="var" path="TOMCAT_COMMON"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
