@@ -18,7 +18,7 @@
                              image files), including the WEB-INF subdirectory
                              and its configuration file contents.
 
-     $Id: build.xml,v 1.16 2011-02-13 17:02:36 tlocke_m Exp $
+     $Id: build.xml,v 1.17 2011-05-02 09:09:45 tlocke_m Exp $
 -->
 <!-- A "project" describes a set of targets that may be requested
      when Ant is executed.  The "default" attribute defines the
@@ -47,7 +47,7 @@
                              image files), including the WEB-INF subdirectory
                              and its configuration file contents.
 
-     $Id: build.xml,v 1.16 2011-02-13 17:02:36 tlocke_m Exp $
+     $Id: build.xml,v 1.17 2011-05-02 09:09:45 tlocke_m Exp $
 -->
 <!-- A "project" describes a set of targets that may be requested
      when Ant is executed.  The "default" attribute defines the
@@ -56,6 +56,7 @@
      from which Ant executes the requested task.  This is normally
      set to the current working directory.
 -->
+
 <project name="Imprimatur" default="compile" basedir=".">
 	<!-- ===================== Property Definitions =========================== -->
 	<!--
@@ -144,7 +145,7 @@
 
 	<property name="javalib.home" value="${user.home}/java" />
 
-	<property name="catalina.home" value="${javalib.home}/jakarta-tomcat" />
+	<property name="catalina.home" value="/usr/share/tomcat6" />
 
 	<property name="dist.home" value="${basedir}/dist" />
 
@@ -543,7 +544,7 @@
 		<mkdir dir="${classes.dir}" />
 
 		<copy todir="${lib.dir}">
-			<fileset dir="${javalib.home}/httpcomponents-client-4.1/lib" />
+			<fileset dir="${javalib.home}/httpcomponents-client-4.1.1/lib" />
 		</copy>
 
 		<mkdir dir="${classes.dir}" />
