@@ -11,8 +11,8 @@
 		</request>
 	</test>
 	<test name="credentials success">
-		<credentials username="conrad" password="kurtz" />
 		<request path="/imprimatur/test_01_credentials.html" method="get">
+			<credentials username="conrad" password="kurtz" />
 			<response-code value="200" />
 		</request>
 	</test>
